<resources>
    <string name="app_name" translatable="false">Lawyer</string>
    <string name="facebook_app_id" translatable="false">641877796515383</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb641877796515383</string>

    <string name="login_title">Login</string>

    <string name="login_option">OR CONNECT WITH</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register_now">Register now!</string>

    <string name="register_title">Register</string>
    <string name="register_as_lawyer">Register as lawyer:</string>

    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_country">Country</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_question">Question</string>
    <string name="hint_city">City</string>
    <string name="hint_specialization">Specialization</string>
    <string name="hint_experience">Experience</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_date">Date</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_lawyers">Lawyers</string>

    <string name="call_dialog_title_lawyer">Call a lawyer</string>
    <string name="call_dialog_message_lawyer">Are you sure you want to call this lawyer?</string>
    <string name="call_dialog_title_user">Call a client</string>
    <string name="call_dialog_message_user">Are you sure you want to call this client?</string>

    <string name="item_lawyer_name">Name: %s</string>
    <string name="item_lawyer_specialization">Specialization: %s</string>
    <string name="item_lawyer_education">Education: %s</string>
    <string name="item_lawyer_number_of_won_cases">Number of won cases: %d</string>
    <string name="item_lawyer_won_cases">%d won cases</string>
    <string name="item_lawyer_country">Country: %s</string>
    <string name="item_lawyer_city">City: %s</string>
    <string name="item_lawyer_location">Location: %s, %s</string>
    <string name="item_lawyer_address">Address: %s</string>
    <string name="item_lawyer_experience">Since %d</string>
    <string name="lawyersinfo_notable_cases">Notable cases:</string>


    <string name="action_ask_a_question">Ask A Question</string>
    <string name="action_message">Message</string>
    <string name="action_filter">Filter</string>
    <string name="action_call">Call</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_logout">Logout</string>

    <string name="case_short_description">Short description</string>
    <string name="case_hint_court">Court</string>
    <string name="case_hint_area">Area</string>
    <string name="case_hint_type">Type</string>
    <string name="case_hint_outcome">Outcome</string>

    <string name="item_case_short_description">Short description: %s</string>
    <string name="item_case_court">Court: %s</string>
    <string name="item_case_type">Type: %s</string>
    <string name="item_case_area">Area: %s</string>
    <string name="item_case_outcome">Outcome: %s</string>
    <string name="item_case_date">Date: %s</string>

    <string name="item_question_question">Question: %s</string>
    <string name="item_question_colon">Question:</string>
    <string name="item_question_country">Country: %s</string>
    <string name="item_question_city">City: %s</string>
    <string name="item_question_phone">Phone: %s</string>
    <string name="item_question_full_name">Name: %s</string>
    <string name="item_question_email">Email: %s</string>

    <string name="profile_your_cases">Your cases:</string>
    <string name="profile_switch_dark_mode">Switch Dark Mode</string>
    <string name="profile_update_phone_number">Update Phone Number</string>
    <string name="profile_update_country">Update Country</string>
    <string name="profile_update_city">Update City</string>
    <string name="profile_update_specialization">Update Specialization</string>
    <string name="profile_update_education">Update Education</string>
    <string name="profile_update_experience">Update start of service</string>
    <string name="profile_update_won_cases">Update Won Cases</string>

    <string name="content_desc_picture_of_lawyer">Picture of lawyer</string>
    <string name="content_desc_profile_change_profile_picture">Change profile picture</string>
    <string name="content_desc_profile_add_your_case">Add your case</string>
    <string name="content_desc_lawyers_filter_lawyers_by_categories">Filter lawyers by categories</string>

    <string name="error_invalid_city">Invalid city</string>
    <string name="error_empty_field">Field can\'t be empty</string>
    <string name="error_password_not_long_enough">Password must be longer than 6 symbols</string>

    <string name="title_reservations">Reservations</string>
    <string name="title_asked_questions">Asked Questions</string>
    <string name="profile_empty_cases">You don\'t have any cases.\nTry adding some.</string>
    <string name="lawyersinfo_empty_cases">Lawyer doesn\'t have any cases added.</string>
    <string name="error_invalid_name">Full name is not valid.</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="dialog_title_confirm">Confirm</string>
    <string name="dialog_are_you_sure">Are you sure you want to delete this item?</string>
    <string name="action_book_visit">Book visit</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_change_working_hours">Change working hours</string>
    <string name="action_set_time">Set time</string>

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="action_reset">Reset</string>
    <string name="error_select_date">Please select date</string>
    <string name="error_select_time">Please select time</string>
    <string name="success">Success</string>
    <string name="error_something">Something went wrong, please try again!</string>
    <string name="reservation_no_available_dates">Lawyer doesn\'t have available times.\nTry another day.</string>
    <string name="dialog_title_working_hours">Working Hours</string>
    <string name="dialog_title_reservation">Reservation</string>
    <string name="dialog_title_edit">Edit</string>
    <string name="dialog_title_profile_edit">Profile Edit</string>
    <string name="dialog_title_new_case">New Case</string>
    <string name="dialog_title_question">New Question</string>
    <string name="profile_update_address">Update address</string>

    <string name="reservation_date">Date: %s</string>
    <string name="reservation_lawyer_name">Lawyer: %s</string>
    <string name="reservation_lawyer_address">Address: %s</string>
    <string name="reservation_visit_type_person">Visit type: In person</string>
    <string name="reservation_visit_type_remote">Visit type: Remote</string>
    <string name="reservation_time">Time: %s</string>
    <string name="action_update_profile_information">Change profile information</string>
    <string name="vertical_dots" translatable="false">⋮</string>
    <string name="action_change_time">Change time</string>
    <string name="visit_type_in_person">In person</string>
    <string name="visit_type_remote">Remote</string>
    <string name="visit_type_text">Visit type</string>
    <string name="reservation_no_available_times">Lawyer doesn\'t have available times on this day.\nTry another day.</string>
    <string name="reservation_no_active_reservation">No reservations to show.\nGo to lawyers tab and choose a lawyer.</string>
    <string name="reservation_no_reservations">No reservations to show.</string>
    <string name="question_no_questions">No questions to show.</string>
    <string name="question_no_active_questions">No questions to show.\nGo to lawyers tab and choose a lawyer.</string>
    <string name="history_your_previous_reservations">Your previous reservations</string>
    <string name="profile_reservation_history">Reservation history</string>
    <string name="history_no_prev_reserv">You don\'t have any previous reservations.</string>
    <string name="content_desc_call_question_asker">Call question asker</string>
    <string name="error_no_phone_number">User doesn\'t have a phone number.</string>
    <string name="item_reservation_payment_type">Payment type: %s</string>
    <string name="profile_update_payment_types">Update payment types</string>
    <string name="title_history">History</string>

    <string name="two_string_comma" translatable="false">%s, %s</string>
</resources>