<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="role"
            type="com.acruxcs.lawyer.model.UserTypes" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.profile.ProfileFragment">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/picture_background"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/colorPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RelativeLayout
                        android:id="@+id/layout_picture"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="25dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image_picture"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/button_edit_picture"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/image_picture"
                            android:layout_alignParentBottom="true"
                            android:contentDescription="@string/content_desc_profile_change_profile_picture"
                            android:src="@drawable/ic_edit_24"
                            app:fabSize="mini" />
                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraint_picture">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_update_phone_number"
                            android:imeOptions="actionDone"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_country"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_phone">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/edit_country"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/profile_update_country"
                            android:imeOptions="actionDone"
                            android:inputType="none"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_city"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_country">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/edit_city"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/profile_update_city"
                            android:imeOptions="actionDone"
                            android:inputType="none"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_city">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_new_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_specialization"
                        goneUnless="@{role}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_specialization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_update_specialization"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_education"
                        goneUnless="@{role}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_specialization">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_education"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_update_education"
                            android:imeOptions="actionDone"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_experience"
                        goneUnless="@{role}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_education">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_experience"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_update_experience"
                            android:imeOptions="actionDone"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_won_cases"
                        goneUnless="@{role}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/textColor"
                        app:endIconContentDescription="Send updated info"
                        app:endIconDrawable="@drawable/ic_send_24"
                        app:endIconMode="custom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_experience">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_won_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_update_won_cases"
                            android:imeOptions="actionDone"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_dark_mode"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:text="@string/profile_switch_dark_mode"
                        android:textColor="@color/textColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layout_won_cases" />

                    <Button
                        android:id="@+id/button_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/action_logout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/switch_dark_mode" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    goneUnless="@{role}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraint_settings">

                    <TextView
                        android:id="@+id/text_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_your_cases"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_cases" />

                    <TextView
                        android:id="@+id/text_empty_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_empty_cases"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_cases" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_case"
            goneUnless="@{role}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/content_desc_profile_add_your_case"
            android:gravity="bottom|end"
            android:src="@drawable/ic_add_24"
            app:borderWidth="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
